--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ setTimeout(function(){
 
 	<!-- album informations -->
 		<div class="album_info albumContainer js-albumContainer">
-		<div class="album_img"><img src="./files/ftm_20171499471710_260.jpg"></div>		</div>
+		<div class="album_img"><img src="./files/free.jpg"></div>		</div>
 	<!-- album informations -->
 
 
