--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </ol>
 
 <div class="carousel-inner">
-<div class="item active"><a href="http://www.StereoLom.com/tour/"><img alt="StereoLom Europe 2018" data-src="http://cdn.StereoLom.com/non_secure/images/website/nb_ftm.png" src="./files/nb_ftm.png"> </a></div>
+<div class="item active"><a href="http://www.StereoLom.com/tour/"><img alt="StereoLom Europe 2018" data-src="http://cdn.StereoLom.com/non_secure/images/website/nb_ftm.png" src="./files/stereolom.jpg"> </a></div>
 
 <div class="item"><a href="http://www.StereoLom.com/tour/" target="_blank"><img alt="StereoLom Vegas" data-src="http://cdn.StereoLom.com/non_secure/images/website/nb_vegas.png" src="./files/nb_vegas.png"> </a></div>
 </div>
@@ -856,7 +856,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="news_teaser newsContent js-newsContent">
 
 	<div class="segment_title topspace">News</div><div class="row">
-    <div class="col-md-6 newsItemContainer js-newsItemContainer displayMe">
+    <!--div class="col-md-6 newsItemContainer js-newsItemContainer displayMe">
         <div class="news_image">
         			<a href="http://www.StereoLom.com/news/title/feed-the-machine-2018-european-tour-with-special-guest-seether/"><img src="./files/medium.jpg" class="news_img"></a>        </div>
 
@@ -939,7 +939,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-</div>
+</div-->
 	 <div class="col-sm-12">
 	   <a href="http://www.StereoLom.com/news"><div class="viewmore">VIEW MORE</div></a>
 	 </div>
@@ -1033,11 +1033,11 @@ setTimeout(function(){
 				</ul>
 			</div>
 
-      <div class="col-md-12">
+      <!--div class="col-md-12">
               <a href="http://www.StereoLom.com/service/emaillist"><div class="more email_signup"><i class="fa fa-envelope" aria-hidden="true"></i>SIGN UP FOR EMAIL LIST</div></a>
                <!--  email sign up goes here -->
             </div>
-			</div>
+			</div-->
 
 			<div class="col-xs-12 copyright">
 					©2018 StereoLom.com.
